# constellation-algo

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml
backend/: .copier-answers.yml  README.md  pyproject.toml
backend/smart_contracts/: __main__.py  config.py
backend/smart_contracts/artifacts/ConstellationDerivative/: application.json  approval.teal  client.py  contract.json
backend/smart_contracts/constellation_derivative/: contract.py  deploy_config.py
frontend/: .copier-answers.yml  README.md  package-lock.json  package.json
frontend/src/contracts/: ConstellationDerivative.ts  hello_world.ts
smart_contracts/: README.md
smart_contracts/constellation_derivative/: constellation_derivative.py  constellation_derivative.pyi  contract.py  deploy_config.py
smart_contracts/derivative/: contract.py  deploy_config.py  derivative.py
smart_contracts/derivative/artifacts/: application.json  contract.json
tests/: constellation_derivative_test.py  derivative_test.py
